Добавляет ручки смены и сброса пароля
